Update:fix overflow bug in search-page.component.scss

--- a/src/app/movies/pages/search-page/search-page.component.scss
+++ b/src/app/movies/pages/search-page/search-page.component.scss
@@ -8,7 +8,7 @@
 }
 :host
 {
-  display: block;
+  //display: block;
   height: 80vh;
   width: 100%;
 }
